--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="forest.jpg" alt="Background image of a dark forest">
+    <button>Battle</button>
     <script src="index.js"></script>
 </body>
 </html>
