made attack button that only work if in a battle

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <img src="forest.jpg" alt="Background image of a dark forest">
-    <button>Battle</button>
+    <button id="battle-btn">Battle</button>
+    <button id="att-btn">Attack</button>
     <script src="index.js"></script>
 </body>
 </html>
