--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <img src="forest.jpg" alt="Background image of a dark forest">
-    <button id="battle-btn">Battle</button>
-    <button id="att-btn">Attack</button>
+    <div id="main-char">Main Char</div>
+    <div id="opponet">Opponet</div>
+    <nav>
+        <button id="battle-btn">Battle</button>
+        <button id="att-btn">Attack</button>
+    </nav>
+
     <script src="index.js"></script>
 </body>
 </html>
