--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="index.css">
     <title>Eastwood</title>
 </head>
-<body>
-    <img src="forest.jpg" alt="Background image of a dark forest">
-    <div id="main-char">Main Char</div>
-    <div id="opponet">Opponet</div>
-    <nav>
-        <button id="battle-btn">Battle</button>
-        <button id="att-btn">Attack</button>
-    </nav>
-
+<body>  
+    <div id="game-display">
+        <img src="forest.jpg" alt="Background image of a dark forest">   
+        <div id="main-char">Main Char</div>
+        <div id="opponet">Opponet</div>
+        <nav>
+            <button id="battle-btn">Battle</button>
+            <button id="att-btn">Attack</button>
+        </nav>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
