added final boss button
increased charcter stats

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <button id="battle-btn">Battle</button>
             <button id="att-btn">Attack</button>
+            <button id="boss">Final Battle</button>
         </nav>
     </div>
     <script src="index.js"></script>
