updated battle button
added run button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button id="rest-btn">Rest</button>
             <button id="battle-btn">Battle</button>
             <button id="att-btn">Attack</button>
+            <button id="run">Run</button>
             <button id="boss">Final Battle</button>
         </nav>
     </div>
