js code can append img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="creature-stats">
                 <h3 id="enemy-lvl">Level: </h3>
                 <h3 id="enemy-hp">HP: </h3>
-                <img src="snake.jpg" alt="image of a snake" id="snake">
+                <!-- <img src="snake.jpg" alt="image of a snake" id="snake"> -->
             </div>
         </div>
         <nav>
