--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="game-display">
         <img src="forest.jpg" alt="Background image of a dark forest" id="background">   
         <div id="main-char">
-            <h1>Adam</h1>
+            <h1 id="main-char-name">Adam</h1>
             <div id="hero-stats">
                 <h3 id="hero-lvl">Level: </h3>
                 <h3 id="hero-hp">HP: </h3>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div id="opponet">
-            <h1>Creature</h1>
+            <h1 id="enemy-name">Creature</h1>
             <div id="creature-stats">
                 <h3 id="enemy-lvl">Level: </h3>
                 <h3 id="enemy-hp">HP: </h3>
