created new enemy
created load enemy function

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <img src="knight.jpg" alt="image of a knight" id="knight">
             </div>
         </div>
-        <div id="opponet">
-            <h1 id="enemy-name">Creature</h1>
-            <div id="creature-stats">
-                <h3 id="enemy-lvl">Level: </h3>
-                <h3 id="enemy-hp">HP: </h3>
+        <div id="enemy">
+            <h1 id="enemy-name"></h1>
+            <div id="enemy-stats">
+                <h3 id="enemy-lvl"></h3>
+                <h3 id="enemy-hp"></h3>
                 <!-- <img src="snake.jpg" alt="image of a snake" id="snake"> -->
             </div>
         </div>
